--- a/examples/basic-text-overlay.yaml
+++ b/examples/basic-text-overlay.yaml
@@ -3,7 +3,7 @@ input:
   buffer_size: 1048576
   connection_retry: 3
   timeout: 30
-  source_type: "souphttpsrc"  # Traditional approach with maximum control
+  source_type: "playbin3"  # Use playbin3 for automatic HLS handling
 
 output:
   host: "127.0.0.1"
